# asali

./: README.md  default.nix  pyproject.toml
asali/: Alignment.py  Directions.py  ScoringMatrix.py  SequenceAligner.py  main.py
examples/matrices/: AA_SIMPLE  DNA_SIMPLE
examples/results/: basic-possible-alignments.txt  blosum-possible-alignments.txt  pam-possible-alignments.txt  s1-s2-alignment.txt  s1-s3-alignment.txt  s1-s4-alignment.txt  s1-s5-alignment.txt  s2-s3-alignment.txt  s2-s4-alignment.txt  s2-s5-alignment.txt  s3-s4-alignment.txt  s3-s5-alignment.txt  s4-s5-alignment.txt
tests/: test_scoring_matrix.py
